# vec-embed-store

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: release-plz.yml
src/: lib.rs
