[package]
name = "embeddings_db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
fastembed = "3.5.0"
lancedb = "0.4.20"
arrow-array = "51.0.0"
arrow-schema = "51.0.0"
serde_arrow = { version = "0.11.3", features = ["arrow-51"] }
tempfile = "3.10.1"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
futures = "0.3.30"
serde = { version = "1.0.200", features = ["derive"] }
lazy_static = "1.4.0"

