[package]
name = "vec-embed-store"
version = "0.1.1"
edition = "2021"
description = "This is a thin wrapper around LanceDb (VectorDb) meant to provide a means to create/store/query embeddings in a LanceDb without the need to grok the lower level Arrow/ColumnarDb tech."
license = "Apache-2.0"

[dependencies]
# ATM fastembed needs 1.0.82
anyhow = "1.0.82"
fastembed = "3.6.0"
lancedb = "0.5.2"
# ATM lancedb is using arrow 51
arrow-array = "51.0.0"
arrow-schema = "51.0.0"
serde_arrow = { version = "0.11.5", features = ["arrow-51"] }
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.21"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
lazy_static = "1.4.0"
